comments addressal